# XiaoDouRobot

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
src/main/java/com/iflytek/util/: DrawableUtils.java  Resize.java  Version.java  XmlParser.java
src/main/java/com/klniu/xiaoyi/: AudioPlayer.java  AudioRecorder.java  CommandPutter.java  CommandQueue.java  Configuration.java  IndexFiles.java  Main.java  MinimInput.java  Robot.java  RobotConfig.java  SoundChecker.java
src/main/java/com/klniu/xiaoyi/BDYuYin/: BDAuth.java  BDRecognizer.java  BDText2Audio.java
src/main/java/com/klniu/xiaoyi/XFJNI/: Iat.java  RecognizerListener.java  SpeechRecognizer.java
src/main/java/com/klniu/xiaoyi/XFYuYin/: XFArs.java  XFAuth.java  XFRecognizer.java  XFTTS.java
src/main/jni/: CMakeLists.txt  Iat.h  SpeechRecognizer.h  functions.c  iat.c  speech_recognizer.c  speech_recognizer.h  speechrecognizer.c
src/main/resources/: config  log4j2.xml
src/main/resources/grammars/: main_grammar.txt  music_grammar.txt
src/test/java/com/klniu/xiaoyi/: IndexFilesTest.java
src/test/java/com/klniu/xiaoyi/BDYuYin/: BDRecognizerTest.java
